--- a/index.html
+++ b/index.html
@@ -61,10 +61,78 @@
         </div>
     </section>
 
+    <section class="experiences">
+        <div class="container">
+            <h2>Experiencias</h2>
+            <ul>
+                <li>Tecnico en Analisis y Desarrollo de Software</li>
+                <li>Competidor de programación a nivel institucional</li>
+                <li>Aprendiz Sena</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="references">
+        <div class="container">
+            <h2>Referencias</h2>
+            <div class="references-grid">
+                <div class="reference">
+                    <h3>Referencia 1</h3>
+                    <p>Stick Campos (Desarrollador de Software): 3128451709</p>
+                </div>
+                <div class="reference">
+                    <h3>Referencia 2</h3>
+                    <p>Robert Gomez (Ingeniero de Software) 300204505</p>
+                </div>
+                <div class="reference">
+                    <h3>Referencia 3</h3>
+                    <p> Karol Vanegas (Cursante Ingieneria de Software) 3128688516</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="projects">
+        <div class="container">
+            <h2>Proyectos</h2>
+            <div class="projects-grid">
+                <div class="project">
+                    <img src="assets/proyecto1.png" alt="Proyecto 1" class="project-logo">
+                    <h3>Proyecto 1</h3>
+                    <p>Descripción del proyecto 1.</p>
+                    <button class="show-more">Ver más</button>
+                    <div class="project-description">
+                        <p>Descripción detallada del proyecto 1.</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="assets/proyecto2.png" alt="Proyecto 2" class="project-logo">
+                    <h3>Proyecto 2</h3>
+                    <p>Descripción del proyecto 2.</p>
+                    <button class="show-more">Ver más</button>
+                    <div class="project-description">
+                        <p>Descripción </p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="assets/proyecto3.png" alt="Proyecto 3" class="project-logo">
+                    <h3>Proyecto 3</h3>
+                    <p>Descripción del proyecto 3.</p>
+                    <button class="show-more">Ver más</button>
+                    <div class="project-description">
+                        <p>Descripción </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Juan Carlos. Todos los derechos reservados.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
