--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <h1>Portafolio</h1>
         </div>
     </header>
-
     <section class="profile">
         <div class="container profile-container">
             <div class="photo">
@@ -22,7 +21,7 @@
             </div>
             <div class="description">
                 <div class="trapecio">
-                    <p>Hola, soy <strong>Juan Carlos Murillo Quintero</strong>, estudiante de programación. Me apasiona el desarrollo web y tengo experiencia en HTML, CSS, JavaScript, Python, y MySQL. Estoy en busca de oportunidades para aplicar mis habilidades y aprender más en un entorno profesional.</p>
+                    <p>Cordial Saludo, soy <strong>Juan Carlos Murillo Quintero</strong>, estudiante de programación. Me desempeño de manera efectiva en el desarrollo web, tengo la oportunidad de contar con experiencia en HTML, CSS, JavaScript, Python, y MySQL. Tambien cuento con habilidades a nivel personal, caracter, disciplina, determinación etc.</p>
                 </div>
             </div>
         </div>
@@ -71,26 +70,26 @@
             </ul>
         </div>
     </section>
-
     <section class="references">
         <div class="container">
             <h2>Referencias</h2>
-            <div class="references-grid">
-                <div class="reference">
+            <div class="reference-cards">
+                <div class="reference-card">
                     <h3>Referencia 1</h3>
                     <p>Stick Campos (Desarrollador de Software): 3128451709</p>
                 </div>
-                <div class="reference">
+                <div class="reference-card">
                     <h3>Referencia 2</h3>
                     <p>Robert Gomez (Ingeniero de Software) 300204505</p>
                 </div>
-                <div class="reference">
+                <div class="reference-card">
                     <h3>Referencia 3</h3>
-                    <p> Karol Vanegas (Cursante Ingieneria de Software) 3128688516</p>
+                    <p>Karol Vanegas (Cursante Ingieneria de Software) 3128688516</p>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <section class="projects">
         <div class="container">
@@ -99,7 +98,7 @@
                 <div class="project">
                     <img src="assets/proyecto1.png" alt="Proyecto 1" class="project-logo">
                     <h3>Proyecto 1</h3>
-                    <p>Descripción del proyecto 1.</p>
+                    <p>VitaleLifeGym.</p>
                     <button class="show-more">Ver más</button>
                     <div class="project-description">
                         <p>Descripción detallada del proyecto 1.</p>
@@ -108,7 +107,7 @@
                 <div class="project">
                     <img src="assets/proyecto2.png" alt="Proyecto 2" class="project-logo">
                     <h3>Proyecto 2</h3>
-                    <p>Descripción del proyecto 2.</p>
+                    <p>Atlas</p>
                     <button class="show-more">Ver más</button>
                     <div class="project-description">
                         <p>Descripción </p>
@@ -117,7 +116,7 @@
                 <div class="project">
                     <img src="assets/proyecto3.png" alt="Proyecto 3" class="project-logo">
                     <h3>Proyecto 3</h3>
-                    <p>Descripción del proyecto 3.</p>
+                    <p>Travel</p>
                     <button class="show-more">Ver más</button>
                     <div class="project-description">
                         <p>Descripción </p>
@@ -129,7 +128,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Juan Carlos. Todos los derechos reservados.</p>
+            <p>&copy; 2024 Todos los derechos reservados.</p>
         </div>
     </footer>
 
