--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="assets/proyecto2.png" alt="Proyecto 2" class="project-logo">
+                    <img src="assets/proyecto2.PNG" alt="Proyecto 2" class="project-logo">
                     <h3>Proyecto 2</h3>
                     <p>Atlas</p>
                     <button class="show-more">Ver más</button>
