--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <p>VitaleLifeGym.</p>
                     <button class="show-more">Ver más</button>
                     <div class="project-description">
-                        <p>Descripción detallada del proyecto 1.</p>
+                        <p>Web para un Gimnasio</p>
                     </div>
                 </div>
                 <div class="project">
@@ -110,7 +110,7 @@
                     <p>Atlas</p>
                     <button class="show-more">Ver más</button>
                     <div class="project-description">
-                        <p>Descripción </p>
+                        <p>Proyecto demostratrivo </p>
                     </div>
                 </div>
                 <div class="project">
@@ -119,7 +119,7 @@
                     <p>Travel</p>
                     <button class="show-more">Ver más</button>
                     <div class="project-description">
-                        <p>Descripción </p>
+                        <p>Web para reservar destinos</p>
                     </div>
                 </div>
             </div>
