--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <div class="container">
             <h2>Experiencias</h2>
             <ul>
-                <li>Tecnico en Analisis y Desarrollo de Software</li>
+                <li>Tecnico en Análisis y Desarrollo de Software</li>
                 <li>Competidor de programación a nivel institucional</li>
-                <li>Aprendiz Sena</li>
+                <li>Cursante de Tecnologo en el Sena</li>
             </ul>
         </div>
     </section>
